skeletal version for testing

--- a/mantis-oracle.cabal
+++ b/mantis-oracle.cabal
@@ -1,8 +1,8 @@
-name:               mantis-oracle
-version:            0.1.0.0
-cabal-version:      2.4
-author:             Brian W Bush
-maintainer:         code@functionally.io
+cabal-version     : 2.4
+name              : mantis-oracle
+version           : 0.1.0.0
+author            : Brian W Bush
+maintainer        : code@functionally.io
 extra-source-files: CHANGELOG.md
 
 library
@@ -10,6 +10,7 @@ library
   exposed-modules : Mantis.Oracle
                     Mantis.Oracle.Client
                     Mantis.Oracle.Owner
+                    Mantis.Oracle.Test
                     Mantis.Oracle.Types
   build-depends   : base ^>=4.14.1.0
                   , aeson
@@ -26,10 +27,13 @@ library
                   , prettyprinter
                   , text
   default-language: Haskell2010
+  ghc-options     : -Wall
 
 executable sofr-oracle
    hs-source-dirs  : app
    main-is         : Main.hs
    build-depends   : base ^>=4.14.1.0
+                   , mantis-oracle
    default-language: Haskell2010
+   ghc-options     : -Wall
 
