--- a/mantis-oracle.cabal
+++ b/mantis-oracle.cabal
@@ -14,6 +14,7 @@ library
   build-depends   : base ^>=4.14.1.0
                   , aeson
                   , containers
+                  , plutus-core
                   , plutus-contract
                   , plutus-ledger
                   , plutus-tx
