FRA-26 added read-me and example output

--- a/mantis-oracle.cabal
+++ b/mantis-oracle.cabal
@@ -9,7 +9,7 @@ library
   hs-source-dirs  : src
   exposed-modules : Mantis.Oracle
                     Mantis.Oracle.Client
-                    Mantis.Oracle.Owner
+                    Mantis.Oracle.Controller
                     Mantis.Oracle.Types
   build-depends   : base ^>=4.14.1.0
                   , aeson
