--- a/mantis-oracle.cabal
+++ b/mantis-oracle.cabal
@@ -32,11 +32,11 @@ library
                   , plutus-tx-plugin
                   , text
   default-language: Haskell2010
-  ghc-options     : -Wall
+  ghc-options     : -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise -Wall
 
-executable sofr-oracle
+executable mantis-oracle-test
    hs-source-dirs  : app
-   main-is         : Main.hs
+   main-is         : Test.hs
    build-depends   : base ^>=4.14.1.0
                    , containers
                    , data-default
@@ -46,5 +46,50 @@ executable sofr-oracle
                    , plutus-ledger
                    , plutus-tx
                    , text
+   default-language: Haskell2010
+   ghc-options     : -Wall
+
+executable mantis-oracle-pab
+   hs-source-dirs  : app
+   main-is         : PAB.hs
+   build-depends   : base ^>=4.14.1.0
+--                 , aeson
+--                 , data-default
+--                 , freer-extras
+--                 , freer-simple
+--                 , mantis-oracle
+--                 , playground-common
+--                 , plutus-contract
+--                 , plutus-ledger
+--                 , plutus-ledger-api
+--                 , plutus-pab
+--                 , plutus-use-cases
+--                 , prettyprinter
+--                 , text
+   default-language: Haskell2010
+   ghc-options     : -threaded -Wall
+
+executable mantis-oracle-controller
+   hs-source-dirs  : app
+   main-is         : Controller.hs
+   build-depends   : base ^>=4.14.1.0
+--                 , bytestring
+--                 , regex-tdfa ^>= 1.3.1.0
+--                 , req ^>= 3.9.0
+--                 , text
+--                 , uuid
+   default-language: Haskell2010
+   ghc-options     : -Wall
+
+executable mantis-oracle-client
+   hs-source-dirs  : app
+   main-is         : Client.hs
+   build-depends   : base ^>=4.14.1.0
+--                 , aeson
+--                 , mantis-oracle
+--                 , plutus-ledger
+--                 , req ^>= 3.9.0
+--                 , text
+--                 , uuid
    default-language: Haskell2010
    ghc-options     : -Wall
