--- a/cabal.project
+++ b/cabal.project
@@ -1,23 +1,24 @@
 index-state: 2021-04-13T00:00:00Z
 
+
 packages: ./.
 
--- You never, ever, want this.
-write-ghc-environment-files: never
 
--- Always build tests and benchmarks.
-tests: true
-benchmarks: true
+-- Never build tests and benchmarks.
+tests: false
+benchmarks: false
+
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/plutus.git
   subdir:
     freer-extras
-    marlowe
     playground-common
-    plutus-core
+    plutus-chain-index
     plutus-contract
+    plutus-core
+    plutus-errors
     plutus-ledger
     plutus-ledger-api
     plutus-pab
@@ -26,7 +27,10 @@ source-repository-package
     plutus-use-cases
     prettyprinter-configurable
     quickcheck-dynamic
-  tag: 13da6d416b2b47cdb6f287ff078b9e759bb90b7f
+    web-ghc
+    word-array
+  tag: 9cf58d16021aae5690ea0541180fee078a60ddcd
+
 
 -- The following sections are copied from the 'plutus' repository cabal.project at the revision
 -- given above.
@@ -34,11 +38,27 @@ source-repository-package
 -- not on Hackage, and so need to be pulled in as `source-repository-package`s themselves. Make sure to
 -- re-update this section from the template when you do an upgrade.
 
--- This is also needed so evenful-sql-common will build with a
--- newer version of persistent. See stack.yaml for the mirrored
--- configuration.
-package eventful-sql-common
-  ghc-options: -XDerivingStrategies -XStandaloneDeriving -XUndecidableInstances -XDataKinds -XFlexibleInstances
+-- We never, ever, want this.
+write-ghc-environment-files: never
+
+-- Always build tests and benchmarks.
+tests: false
+benchmarks: false
+
+--  -- This is also needed so evenful-sql-common will build with a
+--  -- newer version of persistent. See stack.yaml for the mirrored
+--  -- configuration.
+--  package eventful-sql-common
+--    ghc-options: -XDerivingStrategies -XStandaloneDeriving -XUndecidableInstances -XDataKinds -XFlexibleInstances
+
+-- FIXME: The above ghc options don't take effect, so use a patched repository instead:
+source-repository-package
+  type: git
+  location: https://github.com/functionally/eventful.git
+  tag: 1adc87293ee96f6be89ee3c9a9a0f4e9f0f261e7
+  subdir:
+    eventful-core
+    eventful-sql-common
 
 allow-newer:
            -- Has a commit to allow newer aeson, not on Hackage yet
@@ -62,6 +82,11 @@ constraints:
 -- (NOTE this will change to ieee754 in newer versions of nixpkgs).
 extra-packages: ieee, filemanip
 
+-- Drops an instance breaking our code. Should be released to Hackage eventually.
+source-repository-package
+  type: git
+  location: https://github.com/Quid2/flat.git
+  tag: 95e5d7488451e43062ca84d5376b3adcc465f1cd
 
 -- Needs some patches, but upstream seems to be fairly dead (no activity in > 1 year)
 source-repository-package
@@ -116,7 +141,7 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/iohk-monitoring-framework
-  tag: a89c38ed5825ba17ca79fddb85651007753d699d
+  tag: 34abfb7f4f5610cabb45396e0496472446a0b2ca
   subdir:
     iohk-monitoring
     tracer-transformers
@@ -140,6 +165,8 @@ source-repository-package
     shelley/chain-and-ledger/executable-spec
     shelley-ma/impl
 
+-- The following two dependencies are not mirrored in the
+-- stack.yaml file, but they are needed regardless by cabal.
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/goblins
