--- a/mantis-oracle.cabal
+++ b/mantis-oracle.cabal
@@ -53,19 +53,19 @@ executable mantis-oracle-pab
    hs-source-dirs  : app
    main-is         : PAB.hs
    build-depends   : base ^>=4.14.1.0
---                 , aeson
---                 , data-default
---                 , freer-extras
---                 , freer-simple
---                 , mantis-oracle
---                 , playground-common
---                 , plutus-contract
---                 , plutus-ledger
---                 , plutus-ledger-api
---                 , plutus-pab
---                 , plutus-use-cases
---                 , prettyprinter
---                 , text
+                   , aeson
+                   , data-default
+                   , freer-extras
+                   , freer-simple
+                   , mantis-oracle
+                   , playground-common
+                   , plutus-contract
+                   , plutus-ledger
+                   , plutus-ledger-api
+                   , plutus-pab
+                   , plutus-use-cases
+                   , prettyprinter
+                   , text
    default-language: Haskell2010
    ghc-options     : -threaded -Wall
 
@@ -73,11 +73,11 @@ executable mantis-oracle-controller
    hs-source-dirs  : app
    main-is         : Controller.hs
    build-depends   : base ^>=4.14.1.0
---                 , bytestring
---                 , regex-tdfa ^>= 1.3.1.0
---                 , req ^>= 3.9.0
---                 , text
---                 , uuid
+                   , bytestring
+                   , regex-tdfa ^>= 1.3.1.0
+                   , req ^>= 3.9.0
+                   , text
+                   , uuid
    default-language: Haskell2010
    ghc-options     : -Wall
 
@@ -85,11 +85,11 @@ executable mantis-oracle-client
    hs-source-dirs  : app
    main-is         : Client.hs
    build-depends   : base ^>=4.14.1.0
---                 , aeson
---                 , mantis-oracle
---                 , plutus-ledger
---                 , req ^>= 3.9.0
---                 , text
---                 , uuid
+                   , aeson
+                   , mantis-oracle
+                   , plutus-ledger
+                   , req ^>= 3.9.0
+                   , text
+                   , uuid
    default-language: Haskell2010
    ghc-options     : -Wall
