FRA-28 implemented basic PAB

--- a/hie.yaml
+++ b/hie.yaml
@@ -2,11 +2,13 @@ cradle:
   cabal:
     - path: "./src"
       component: "lib:mantis-oracle"
-    - path: "./app/Test.hs"
+    - path: "./app/test.hs"
       component: "exe:mantis-oracle-test"
-    - path: "./app/PAB.hs"
+    - path: "./app/pab.hs"
       component: "exe:mantis-oracle-pab"
-    - path: "./app/Controller.hs"
+    - path: "./app/Orphans.hs"
+      component: "exe:mantis-oracle-pab"
+    - path: "./app/controller.hs"
       component: "exe:mantis-oracle-controller"
-    - path: "./app/Client.hs"
+    - path: "./app/client.hs"
       component: "exe:mantis-oracle-client"
