--- a/mantis-oracle.cabal
+++ b/mantis-oracle.cabal
@@ -73,11 +73,16 @@ executable mantis-oracle-controller
    hs-source-dirs  : app
    main-is         : controller.hs
    build-depends   : base ^>=4.14.1.0
+                   , aeson
                    , bytestring
+                   , playground-common
+                   , plutus-ledger-api
+                   , plutus-tx
                    , regex-tdfa ^>= 1.3.1.0
                    , req ^>= 3.9.0
                    , text
                    , uuid
+                   , vector
    default-language: Haskell2010
    ghc-options     : -Wall
 
