FRA-33 added version flag

--- a/hie.yaml
+++ b/hie.yaml
@@ -2,13 +2,7 @@ cradle:
   cabal:
     - path: "./src"
       component: "lib:mantis-oracle"
-    - path: "./app/test.hs"
-      component: "exe:mantis-oracle-test"
-    - path: "./app/pab.hs"
-      component: "exe:mantis-oracle-pab"
-    - path: "./app/Orphans.hs"
-      component: "exe:mantis-oracle-pab"
-    - path: "./app/controller.hs"
-      component: "exe:mantis-oracle-controller"
-    - path: "./app/client.hs"
-      component: "exe:mantis-oracle-client"
+    - path: "./app/Main.hs"
+      component: "exe:mantis-oracle"
+    - path: "./dist-newstyle/build"
+      component: "exe:mantis-oracle"
