--- a/mantis-oracle.cabal
+++ b/mantis-oracle.cabal
@@ -1,14 +1,12 @@
 cabal-version     : 2.4
 name              : mantis-oracle
 description       : This Cardano oracle reports structured data (namely, the `PlutuxTx.Data` type) to a transaction if the fee, as a quantity of a fungible token, is paid. It can be incorporated into other smart-contract scripts that use the oracle's value in their validation logic.
-version           : 0.1.2.1
+version           : 0.1.2.2
 author            : Brian W Bush <code@functionally.io>
 maintainer        : Brian W Bush <code@functionally.io>
 copyright         : (c) 2021 Brian W Bush
 license           : MIT
 license-file      : LICENSE
-extra-source-files: ReadMe.md
-                  , transaction.png
 
 homepage   : https://github.com/functionally/mantis-oracle/ReadMe.md
 bug-reports: https://github.com/functionally/mantis-oracle/issues/
@@ -55,6 +53,8 @@ library
 executable mantis-oracle
    hs-source-dirs  : app
    main-is         : Main.hs
+   other-modules   : Paths_mantis_oracle
+   autogen-modules : Paths_mantis_oracle
    build-depends   : base ^>=4.14.1.0
                    , bytestring
                    , mantis-oracle
