work in progress

--- a/cabal.project
+++ b/cabal.project
@@ -16,209 +16,252 @@ packages: .
 --    extra-include-dirs: /nix/store/m11lzq9kbi76yx339hqi98sjvv3l3jxh-zlib-1.2.11-dev/include
 --    extra-lib-dirs:     /nix/store/qvgf4g9c5h3wzq4xjy566vc0pqgc9fjq-zlib-1.2.11/lib
 
-package cardano-crypto-praos
-  flags: -external-libsodium-vrf
 
-package cryptonite
-  flags: -support_rdrand
-
-
-tests: False
-
-test-show-details: direct
-
-
-package byron-spec-ledger
-  tests: False
-
-package cardano-api
-  tests: False
-
-package cardano-binary
-  tests: False
-
-package cardano-crypto-wrapper
-  tests: False
-
-package cardano-ledger-byron
-  tests: False
-
-package ouroboros-network
-  tests: False
-
-package ouroboros-network-framework
-  tests: False
-
-
--- ------------------------------------------------------------- --
---                                                               --
--- For developing with `nix-shell`:                              --
--- 1.  Run `nix-shell`.                                          --
--- 2.  Temporarily comment-out the lines following this comment. --
--- 3.  Run `cabal build`.                                        --
---                                                               --
--- ------------------------------------------------------------- --
-
-
-source-repository-package
-  type: git
-  location: https://github.com/input-output-hk/plutus.git
-  subdir:
-    freer-extras
-    playground-common
-    plutus-chain-index
-    plutus-contract
-    plutus-core
-    plutus-errors
-    plutus-ledger
-    plutus-ledger-api
-    plutus-pab
-    plutus-tx
-    plutus-tx-plugin
-    plutus-use-cases
-    prettyprinter-configurable
-    quickcheck-dynamic
-    web-ghc
-    word-array
-  tag: 9cf58d16021aae5690ea0541180fee078a60ddcd
-
-
--- The following sections are copied from the 'plutus' repository cabal.project at the revision
--- given above.
--- This is necessary because the  'plutus' libraries depend on a number of other libraries which are
--- not on Hackage, and so need to be pulled in as `source-repository-package`s themselves. Make sure to
--- re-update this section from the template when you do an upgrade.
-
--- We never, ever, want this.
-write-ghc-environment-files: never
-
--- Always build tests and benchmarks.
-tests: false
-benchmarks: false
-
---  -- This is also needed so evenful-sql-common will build with a
---  -- newer version of persistent. See stack.yaml for the mirrored
---  -- configuration.
---  package eventful-sql-common
---    ghc-options: -XDerivingStrategies -XStandaloneDeriving -XUndecidableInstances -XDataKinds -XFlexibleInstances
-
--- FIXME: The above ghc options don't take effect, so use a patched repository instead:
-source-repository-package
-  type: git
-  location: https://github.com/functionally/eventful.git
-  tag: 1adc87293ee96f6be89ee3c9a9a0f4e9f0f261e7
-  subdir:
-    eventful-core
-    eventful-sql-common
-
-allow-newer:
-           -- Has a commit to allow newer aeson, not on Hackage yet
-           monoidal-containers:aeson
-           -- Pins to an old version of Template Haskell, unclear if/when it will be updated
-           , size-based:template-haskell
-
-           -- The following two dependencies are needed by plutus.
-           , eventful-sql-common:persistent
-           , eventful-sql-common:persistent-template
-
-constraints:
-  -- aws-lambda-haskell-runtime-wai doesn't compile with newer versions
-  aws-lambda-haskell-runtime <= 3.0.3
-  -- big breaking change here, inline-r doens't have an upper bound
-  , singletons < 3.0
-  -- breaks eventful even more than it already was
-  , persistent-template < 2.12
-
--- See the note on nix/pkgs/default.nix:agdaPackages for why this is here.
--- (NOTE this will change to ieee754 in newer versions of nixpkgs).
-extra-packages: ieee, filemanip
-
--- Drops an instance breaking our code. Should be released to Hackage eventually.
-source-repository-package
-  type: git
-  location: https://github.com/Quid2/flat.git
-  tag: 95e5d7488451e43062ca84d5376b3adcc465f1cd
-
--- Needs some patches, but upstream seems to be fairly dead (no activity in > 1 year)
-source-repository-package
-  type: git
-  location: https://github.com/shmish111/purescript-bridge.git
-  tag: 6a92d7853ea514be8b70bab5e72077bf5a510596
-
-source-repository-package
-  type: git
-  location: https://github.com/shmish111/servant-purescript.git
-  tag: a76104490499aa72d40c2790d10e9383e0dbde63
-
-source-repository-package
-  type: git
-  location: https://github.com/input-output-hk/cardano-crypto.git
-  tag: f73079303f663e028288f9f4a9e08bcca39a923e
-
-source-repository-package
-  type: git
-  location: https://github.com/input-output-hk/cardano-base
-  tag: 4251c0bb6e4f443f00231d28f5f70d42876da055
-  subdir:
-    binary
-    binary/test
-    slotting
-    cardano-crypto-class
-    cardano-crypto-praos
-
-source-repository-package
-  type: git
-  location: https://github.com/input-output-hk/cardano-prelude
-  tag: ee4e7b547a991876e6b05ba542f4e62909f4a571
-  subdir:
-    cardano-prelude
-    cardano-prelude-test
-
-source-repository-package
-  type: git
-  location: https://github.com/input-output-hk/ouroboros-network
-  tag: 6cb9052bde39472a0555d19ade8a42da63d3e904
-  subdir:
-    typed-protocols
-    typed-protocols-examples
-    ouroboros-network
-    ouroboros-network-testing
-    ouroboros-network-framework
-    io-sim
-    io-sim-classes
-    network-mux
-    Win32-network
-
-source-repository-package
-  type: git
-  location: https://github.com/input-output-hk/iohk-monitoring-framework
-  tag: 34abfb7f4f5610cabb45396e0496472446a0b2ca
-  subdir:
-    iohk-monitoring
-    tracer-transformers
-    contra-tracer
-    plugins/backend-ekg
-
-source-repository-package
-  type: git
-  location: https://github.com/input-output-hk/cardano-ledger-specs
-  tag: 097890495cbb0e8b62106bcd090a5721c3f4b36f
-  subdir:
-    byron/chain/executable-spec
-    byron/crypto
-    byron/crypto/test
-    byron/ledger/executable-spec
-    byron/ledger/impl
-    byron/ledger/impl/test
-    semantics/executable-spec
-    semantics/small-steps-test
-    shelley/chain-and-ledger/dependencies/non-integer
-    shelley/chain-and-ledger/executable-spec
-    shelley-ma/impl
-
--- The following two dependencies are not mirrored in the
--- stack.yaml file, but they are needed regardless by cabal.
-source-repository-package
-  type: git
-  location: https://github.com/input-output-hk/goblins
-  tag: cde90a2b27f79187ca8310b6549331e59595e7ba
+-- package cryptonite
+--   -- Using RDRAND instead of /dev/urandom as an entropy source for key
+--   -- generation is dubious. Set the flag so we use /dev/urandom by default.
+--   flags: -support_rdrand
+-- 
+-- package cardano-crypto-praos
+--   flags: -external-libsodium-vrf
+-- 
+-- -- ---------------------------------------------------------
+-- -- Disable all tests by default
+-- 
+-- tests: False
+-- 
+-- test-show-details: direct
+-- 
+-- -- Then enable specific tests in this repo
+-- 
+-- package cardano-api
+--   tests: False
+-- 
+-- package cardano-cli
+--   tests: False
+-- 
+-- package cardano-node
+--   tests: False
+-- 
+-- package cardano-node-chairman
+--   tests: False
+-- 
+-- package cardano-testnet
+--   tests: False
+-- 
+-- -- The following is needed because Nix is doing something crazy.
+-- package byron-spec-ledger
+--   tests: False
+-- 
+-- package iohk-monitoring
+--   tests: False
+-- 
+-- package ouroboros-consensus-test
+--   tests: False
+-- 
+-- package ouroboros-consensus-cardano-test
+--   tests: False
+-- 
+-- package ouroboros-network
+--   tests: False
+-- 
+-- package ouroboros-network-framework
+--   tests: False
+-- 
+-- package plutus-tx
+--   tests: False
+-- 
+-- package prettyprinter-configurable
+--   tests: False
+-- 
+-- package small-steps
+--   tests: False
+-- 
+-- package small-steps-test
+--   tests: False
+-- 
+-- package goblins
+--   tests: False
+-- 
+-- package io-classes
+--   tests: False
+-- 
+-- package cardano-ledger-alonzo-test
+--   tests: False
+-- 
+-- -- ---------------------------------------------------------
+-- 
+-- -- The two following one-liners will cut off / restore the remainder of this file (for nix-shell users):
+-- -- when using the "cabal" wrapper script provided by nix-shell.
+-- -- --------------------------- 8< --------------------------
+-- -- Please do not put any `source-repository-package` clause above this line.
+-- 
+-- source-repository-package
+--   type: git
+--   location: https://github.com/input-output-hk/cardano-node
+--   tag: 708de685d49ec6af4b2d8b3cbfa0eca0e9e43edf
+--   subdir:
+--     cardano-api
+-- 
+-- -- Using a fork until our patches can be merged upstream
+-- source-repository-package
+--   type: git
+--   location: https://github.com/input-output-hk/optparse-applicative
+--   tag: 3876479d01d681ee529d1b26784335cbe0baf7cd
+--   --sha256: 00gavws6jvl930rq09gs5rdwmyc4n42avk7p9s7pjv52d205v967
+-- 
+-- -- Using a fork until our patches can be merged upstream
+-- source-repository-package
+--   type: git
+--   location: https://github.com/input-output-hk/criterion
+--   tag: fb2e7be532db96255d203f86360230cae37130f3
+--   --sha256: 14r9zkfa8zslky3969gaq27gi7yi9rlqv0h1iq7zam9l15z53vhr
+-- 
+-- source-repository-package
+--   type: git
+--   location: https://github.com/input-output-hk/hedgehog-extras
+--   tag: edf6945007177a638fbeb8802397f3a6f4e47c14
+--   --sha256: 0wc7qzkc7j4ns2rz562h6qrx2f8xyq7yjcb7zidnj7f6j0pcd0i9
+-- 
+-- source-repository-package
+--   type: git
+--   location: https://github.com/input-output-hk/cardano-base
+--   tag: 8c732560b201b5da8e3bdf175c6eda73a32d64bc
+--   --sha256: 0nwy03wyd2ks4qxg47py7lm18karjz6vs7p8knmn3zy72i3n9rfi
+--   subdir:
+--     base-deriving-via
+--     binary
+--     binary/test
+--     cardano-crypto-class
+--     cardano-crypto-praos
+--     cardano-crypto-tests
+--     measures
+--     orphans-deriving-via
+--     slotting
+--     strict-containers
+-- 
+-- source-repository-package
+--   type: git
+--   location: https://github.com/input-output-hk/cardano-crypto
+--   tag: f73079303f663e028288f9f4a9e08bcca39a923e
+--   --sha256: 1n87i15x54s0cjkh3nsxs4r1x016cdw1fypwmr68936n3xxsjn6q
+-- 
+-- source-repository-package
+--   type: git
+--   location: https://github.com/input-output-hk/cardano-ledger-specs
+--   tag: 30eca73a2f5c13f1fbed9a98a59540ac3d0c8afe
+--   --sha256: 02klj4zpcl98p22n2v9nkjxxdf8mmw069mw4ddhlgr931bfigz6w
+--   subdir:
+--     alonzo/impl
+--     byron/chain/executable-spec
+--     byron/crypto
+--     byron/crypto/test
+--     byron/ledger/executable-spec
+--     byron/ledger/impl
+--     byron/ledger/impl/test
+--     cardano-ledger-core
+--     semantics/executable-spec
+--     semantics/small-steps-test
+--     shelley/chain-and-ledger/dependencies/non-integer
+--     shelley/chain-and-ledger/executable-spec
+--     shelley/chain-and-ledger/shelley-spec-ledger-test
+--     shelley-ma/impl
+--     shelley-ma/shelley-ma-test
+-- --TODO: disabled until it drops its dep on plutus-tx-plugin
+-- --  alonzo/test
+-- 
+-- source-repository-package
+--   type: git
+--   location: https://github.com/input-output-hk/cardano-prelude
+--   tag: bb4ed71ba8e587f672d06edf9d2e376f4b055555
+--   --sha256: 00h10l5mmiza9819p9v5q5749nb9pzgi20vpzpy1d34zmh6gf1cj
+--   subdir:
+--     cardano-prelude
+--     cardano-prelude-test
+-- 
+-- source-repository-package
+--   type: git
+--   location: https://github.com/input-output-hk/goblins
+--   tag: cde90a2b27f79187ca8310b6549331e59595e7ba
+--   --sha256: 17c88rbva3iw82yg9srlxjv2ia5wjb9cyqw44hik565f5v9svnyg
+-- 
+-- source-repository-package
+--   type: git
+--   location: https://github.com/input-output-hk/iohk-monitoring-framework
+--   tag: 808724ff8a19a33d0ed06f9ef59fbd900b08553c
+--   --sha256: 0298dpl29gxzs9as9ha6y0w18hqwc00ipa3hzkxv7nlfrjjz8hmz
+--   subdir:
+--     contra-tracer
+--     iohk-monitoring
+--     plugins/backend-aggregation
+--     plugins/backend-ekg
+--     plugins/backend-monitoring
+--     plugins/backend-trace-forwarder
+--     plugins/scribe-systemd
+--     tracer-transformers
+-- 
+-- source-repository-package
+--   type: git
+--   location: https://github.com/input-output-hk/Win32-network
+--   tag: 3825d3abf75f83f406c1f7161883c438dac7277d
+--   --sha256: 19wahfv726fa3mqajpqdqhnl9ica3xmf68i254q45iyjcpj1psqx
+-- 
+-- source-repository-package
+--   type: git
+--   location: https://github.com/input-output-hk/ouroboros-network
+--   tag: e9cda57df7ea6969edbc3bfc4e117668277d09c8
+--   --sha256: 1a91z6yvlhzlqrf7fy51fmmpm3ssk684h6pjgg022cdlsq56yif2
+--   subdir:
+--     io-sim
+--     io-classes
+--     monoidal-synchronisation
+--     network-mux
+--     ouroboros-consensus
+--     ouroboros-consensus-byron
+--     ouroboros-consensus-cardano
+--     ouroboros-consensus-shelley
+--     ouroboros-network
+--     ouroboros-network-framework
+--     ouroboros-network-testing
+--     typed-protocols
+--     typed-protocols-examples
+-- 
+-- source-repository-package
+--   type: git
+--   location: https://github.com/input-output-hk/plutus
+--   tag: 826c2514a40e962c2e4d56ce912803a434cc28fe
+--   --sha256: 04jryrgi2wggkf4a994smbcp8j39clshbzfnvfvvk7lq0sm8kssz
+--   subdir:
+--     plutus-core
+--     plutus-ledger
+--     plutus-ledger-api
+--     plutus-tx
+--     plutus-tx-plugin
+--     prettyprinter-configurable
+--     word-array
+-- 
+-- -- Drops an instance breaking our code. Should be released to Hackage eventually.
+-- source-repository-package
+--   type: git
+--   location: https://github.com/Quid2/flat.git
+--   tag: 95e5d7488451e43062ca84d5376b3adcc465f1cd
+--   --sha256: 06l31x3y93rjpryvlxnpsyq2zyxvb0z6lik6yq2fvh36i5zwvwa3
+-- 
+-- constraints:
+--     hedgehog >= 1.0
+--   , bimap >= 0.4.0
+--   , libsystemd-journal >= 1.4.4
+--   , systemd >= 2.3.0
+--     -- systemd-2.3.0 requires at least network 3.1.1.0 but it doesn't declare
+--     -- that dependency
+--   , network >= 3.1.1.0
+-- 
+-- package comonad
+--   flags: -test-doctests
+-- 
+-- package cardano-ledger-alonzo-test
+--   tests: False
+-- 
+-- allow-newer:
+--   monoidal-containers:aeson,
+--   size-based:template-haskell
